--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,15 @@ language: ruby
 rvm:
 - 2.5.1
 script:
+- xvfb-run make test
 - bundle exec rails db:migrate
 - bundle exec rspec -fd spec
+dist: trusty
+addons:
+  chrome: stable
+before_install:
+  - # start your web application and listen on `localhost`
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 deploy:
   provider: heroku
   api_key:
